--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "homepage": "https://github.com/carlpittenger/personal-budget",
     "type": "module",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.2"
     },
     "devDependencies": {
-        "@types/express": "^4.17.17"
+        "@types/express": "^4.17.18"
     }
 }
